Make help panels fixed position on mobile, up to 100% of height, with single column content.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1962,6 +1962,18 @@ button.button-activated {
   z-index: 1000;
 }
 
+@media (max-width: @mobile-max-width) {
+  .mobile-position-fixed {
+    position: fixed;
+  }
+
+  .mobile-position-fixed-full {
+    .position-fixed-bottom;
+    .position-z-front;
+    box-sizing: border-box;
+    overflow: auto;
+  }
+}
 /* Normal content style */
 
 .content {
